fixed gap - media

--- a/css/media/media.css
+++ b/css/media/media.css
@@ -147,6 +147,10 @@
     font-size: 19px;
   }
 
+  .blog-content {
+    gap: 0;
+  }
+
   .blog-content img {
     display: none;
   }
